bug fix in breadcrumb out of screen

--- a/assets/styles/modules/products/_breadcrumbs.scss
+++ b/assets/styles/modules/products/_breadcrumbs.scss
@@ -25,11 +25,11 @@
 		}
 
 		&--left{
-			left: 0;
+			left: 1em;
 		}
 
 		&--right{
-			right: 0;
+			right: 1em;
 		}
 	}
 
